; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_get.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitmap_get(%struct.bitmap* %0, i64 %1) #0 {
  %3 = alloca %struct.bitmap*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.bitmap* %0, %struct.bitmap** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i64 @EWAH_BLOCK(i64 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %10 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ult i64 %8, %11
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load %struct.bitmap*, %struct.bitmap** %3, align 8
  %15 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @EWAH_MASK(i64 %20)
  %22 = and i32 %19, %21
  %23 = icmp ne i32 %22, 0
  br label %24

24:                                               ; preds = %13, %2
  %25 = phi i1 [ false, %2 ], [ %23, %13 ]
  %26 = zext i1 %25 to i32
  ret i32 %26
}

declare dso_local i64 @EWAH_BLOCK(i64) #1

declare dso_local i32 @EWAH_MASK(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
